--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ ul{
 }
 .box-header{
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 .logo{
     font-family: "Raleway", sans-serif;
@@ -77,6 +78,7 @@ a.list-header{
     letter-spacing: 0.02em;
     color: #2e2f42;
     padding: 24px 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 a.list-header:hover, a.list-header:focus{
     font-family: "Roboto", sans-serif;
@@ -87,6 +89,21 @@ a.list-header:hover, a.list-header:focus{
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #404bbf;
+}
+.list-header.current{
+    position: relative;
+
+}
+.list-header.current::after {
+    content: "";
+    position: absolute; 
+    left: 0;
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+
 }
 .box-address ul{
     font-style: normal;
@@ -102,15 +119,23 @@ a.list-header:hover, a.list-header:focus{
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mail-tel:focus,
-.mail-tel:hover{
+.mail-tel:hover, .list-header.current{
     color: #404bbf;
 }
 /* ПЕРВАЯ СЕКЦИЯ */
 .studio{
+    
+    padding: 188px 0; 
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+    url("../images/peopleoffice.jpg");
+    background-repeat: no-repeat;
+    background-size: 1440px auto;
+    background-position: center;  
+    border: 1px solid #000;  
     background-color: #2e2f42;
-    padding: 188px 0;       
 }
 
 .container-main-studio {
@@ -171,6 +196,16 @@ a.list-header:hover, a.list-header:focus{
 li.portfolio-item{
     width: calc((100% - 72px) / 4);
 }
+.portfolio-icon-section{
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    background: #f4f4fd;
+    padding: 24px 100px;
+}
+.portfolio-icon {
+    width: 64px;
+    height: 64px;
+  }
 .visually-hidden{
     position: absolute;
     width: 1px;
@@ -323,9 +358,7 @@ li.portfolio-item{
     margin: 0;  
 }
 /* ФУТЕР СЕКИЯ */
-.container-footer{
-     
-}
+
 .box-footer{
     background: #2e2f42;
     padding: 100px 0;
