--- a/css/style.css
+++ b/css/style.css
@@ -386,14 +386,11 @@ li.portfolio-item{
 }
 .port-item-hover {
     position: relative;
-    width: 360px;
-    height: 300px;
     overflow: hidden;
     cursor: pointer;
 }
 .port-item img {
-    width: 100%;
-    height: 100%;
+    
     object-fit: cover;
     display: block;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -488,7 +485,23 @@ li.portfolio-item{
     margin-top: 0;
     width: 264px;
 }
-
+.container-footer{
+    display: flex;
+    gap: 120px;
+}
+.container-footer-social .contacts-icon,.container-footer-social .contacts-info-container{
+     width: 24px;
+     height: 24px;
+}
+.footer-title-social{
+    margin: 0 0 16px 0;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+}
 
 
 
