--- a/css/style.css
+++ b/css/style.css
@@ -175,11 +175,12 @@ a.list-header:hover, a.list-header:focus{
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15); 
     border: 0;  
     min-width: 169px; 
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
+      
 }
 
 .button:focus, .button:hover{
         background: #404bbf;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* ВТОРАЯ СЕКИЯ */
 .container-main-portfolio{
@@ -199,6 +200,10 @@ li.portfolio-item{
     width: calc((100% - 72px) / 4);
 }
 .portfolio-icon-section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
     border: 1px solid #8e8f99;
     border-radius: 4px;
     background: #f4f4fd;
@@ -303,7 +308,7 @@ li.portfolio-item{
 }
 .contacts-info-list {
             display: flex;
-            gap: 16px;
+            gap: 24px;
             padding: 0;
             margin: 0;
             list-style: none;
@@ -315,32 +320,28 @@ li.portfolio-item{
         height: 16px;
 }
 
-    .contacts-info-link {
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        width: 40px;
-        height: 40px;
-        background-color: #4D5AE5;
-        border-radius: 50%;
-        text-decoration: none;
-        box-shadow: none;
-        transition:
-                background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-                box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
-                transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.contacts-info-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    background-color: #4D5AE5;
+    border-radius: 50%;
+    text-decoration: none;
+    box-shadow: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-info-link:hover,
 .contacts-info-link:focus {
-    background-color: #31D0AA;
-    box-shadow: 0 4px 10px rgba(49, 208, 170, 0.5);
-    transform: scale(1.05);
+    background-color: #404bbf;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts-icon {
     width: 16px;
     height: 16px;
-    fill: #ffffff;
+    fill: #f4f4fd;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -489,14 +490,17 @@ li.portfolio-item{
 }
 .container-footer{
     display: flex;
-    gap: 120px;
+    align-items: baseline;
+}
+.container-footer-logo{
+    margin-right: 120px;
 }
 .container-footer-social .contacts-icon,.container-footer-social .contacts-info-container{
      width: 24px;
      height: 24px;
 }
 .footer-title-social{
-    margin: 0 0 16px 0;
+    margin-bottom: 16px;
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
