--- a/css/style.css
+++ b/css/style.css
@@ -246,107 +246,104 @@ li.portfolio-item{
     margin: 0;
 }
 /* ТРЕТЬЯ СЕКИЯ */
-.container-main-contacts {
+.container-main-contacts{
     display: flex;
     flex-direction: column;
-  }
-  
-  .contacts {
-    background: #f4f4fd;
-    padding: 120px 0;
-  }
-  
-  .contacts-list {
+}
+.contacts{
+    background: #f4f4fd; 
+    padding: 120px 0;   
+}
+.contacts-list{
     display: flex;
     gap: 24px;
     margin: 0;
     padding: 0;
-    list-style: none;
-  }
-  
-  .contacts-item {
-    background-color: #ffffff;
+
+}
+.contacts-item{
+    background-color: #FFFFFF;
     border-radius: 0 0 4px 4px;
-    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-                0 1px 1px 0 rgba(46, 47, 66, 0.16),
-                0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  }
-  
-  .contacts-h-two-team {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.contacts-h-two-team{
     font-weight: 700;
     font-size: 36px;
+
+    /* line-height: 40px; */ 
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
     text-transform: capitalize;
     color: #2e2f42;
-    margin: 0 0 72px 0;
-  }
-  
-  .contacts-container-info {
+    margin: 0;
+    margin-bottom: 72px;
+}
+.contacts-container-info{
     padding: 32px 0;
-  }
-  
-  .contacts-h-three-team {
+}
+.contacts-h-three-team{
     font-weight: 500;
     font-size: 20px;
+    /* line-height: 24px; */ 
     line-height: 1.2;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
-    margin: 0 0 8px 0;
-  }
-  
-  .contacts-info {
+    margin: 0;
+    margin-bottom: 8px;
+}
+.contacts-info{
     font-weight: 400;
     font-size: 16px;
+
+    /* line-height: 24px; */ 
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-align: center;
     color: #434455;
-    margin: 0 0 8px 0;
-  }
-  
-  /* Новый контейнер вместо ul */
-  .contacts-socials {
+    margin: 0;
+    margin-bottom: 8px;
+}
+.contacts-info-list {
+            display: flex;
+            gap: 24px;
+            padding: 0;
+            margin: 0;
+            list-style: none;
+            justify-content: center;
+            align-items: center;
+}
+.contacts-info-container{
+        width: 16px;
+        height: 16px;
+}
+
+.contacts-info-link {
     display: flex;
-    gap: 24px;
-    justify-content: center;
     align-items: center;
-  }
-  
-  /* Элемент иконки */
-  .contacts-social-link {
+    justify-content: center;
     width: 40px;
     height: 40px;
-  }
-  
-  /* Ссылки на соцсети */
-  .contacts-info-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    background-color: #4d5ae5;
+    background-color: #4D5AE5;
     border-radius: 50%;
     text-decoration: none;
     box-shadow: none;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .contacts-info-link:hover,
-  .contacts-info-link:focus {
+}
+
+.contacts-info-link:hover,
+.contacts-info-link:focus {
     background-color: #404bbf;
-  }
-  
-  /* Иконки внутри svg */
-  .contacts-icon {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.contacts-icon {
     width: 16px;
     height: 16px;
     fill: #f4f4fd;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+}
 
 /* ЧЕТВЕРТАЯ СЕКИЯ */
 .container-main-ourportfolio{
