--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,7 @@ a.list-header:hover, a.list-header:focus{
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15); 
     border: 0;  
     min-width: 169px; 
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
       
 }
 
@@ -245,7 +246,7 @@ li.portfolio-item{
     color: #434455;
     margin: 0;
 }
-/* ТРЕТЬЯ СЕКИЯ */
+/* ТРЕТЬЯ СЕЦКИЯ */
 .container-main-contacts{
     display: flex;
     flex-direction: column;
@@ -512,6 +513,6 @@ footer .contacts-info-link:focus {
     letter-spacing: 0.02em;
     color: #fff;
 }
-
-
-
+.container-footer-social .contacts-info-list .contacts-info-item{
+    gap: 16px;
+}
