--- a/css/style.css
+++ b/css/style.css
@@ -500,6 +500,15 @@ footer .contacts-info-link:focus {
 .container-footer-logo{
     margin-right: 120px;
 }
+.footer-contacts-info-list{
+    display: flex;
+    gap: 16px;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    justify-content: center;
+    align-items: center;
+}
 .container-footer-social .contacts-icon,.container-footer-social .contacts-info-container{
      width: 24px;
      height: 24px;
@@ -512,7 +521,4 @@ footer .contacts-info-link:focus {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #fff;
-}
-.container-footer-social .contacts-info-list .contacts-info-item{
-    gap: 16px;
 }
