--- a/css/style.css
+++ b/css/style.css
@@ -385,10 +385,14 @@ li.portfolio-item{
     margin: 0 0 8px 0;
 }
 
-.port-item {
+.port-item:hover{
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.port-item-img-container{
     position: relative;
     overflow: hidden;
-    cursor: pointer;
 }
 
 .port-item img {
@@ -410,8 +414,8 @@ li.portfolio-item{
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 360px;
+    height: 300px;
     background-color: #4D5AE5;
     color: #ffffff;
     display: flex;
@@ -434,6 +438,7 @@ li.portfolio-item{
 }
 
 .port-hover-text {
+    text-align: justify;
     font-size: 16px;
     line-height: 1.5;
     max-width: 320px;
