--- a/css/style.css
+++ b/css/style.css
@@ -390,7 +390,7 @@ li.portfolio-item{
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-.port-item-img-container{
+.port-item-img-container {
     position: relative;
     overflow: hidden;
 }
@@ -410,7 +410,13 @@ li.portfolio-item{
     z-index: 2;
 }
 
-.port-info-container-hover {
+
+.port-item:hover .port-hover-text {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.port-hover-text {
     position: absolute;
     top: 0;
     left: 0;
@@ -428,20 +434,7 @@ li.portfolio-item{
     transition:
         opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
         transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    z-index: 1;
-}
-
-.port-item:hover .port-info-container-hover {
-    opacity: 1;
-    transform: translateY(0);
-    z-index: 3;
-}
-
-.port-hover-text {
-    text-align: justify;
-    font-size: 16px;
-    line-height: 1.5;
-    max-width: 320px;
+    z-index: 2;
     margin: 0;
 }
 
