--- a/css/style.css
+++ b/css/style.css
@@ -384,7 +384,9 @@ li.portfolio-item{
     color: #2e2f42;
     margin: 0 0 8px 0;
 }
-
+.port-item{
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .port-item:hover{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
@@ -427,15 +429,17 @@ li.portfolio-item{
     display: flex;
     align-items: start;
     justify-content: center;
-    padding: 40px 32px 20px 32px;
+    padding: 40px 32px;
     text-align: center;
     opacity: 0;
     transform: translateY(100%);
-    transition:
-        opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     z-index: 2;
     margin: 0;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+
+
 }
 
 .port-info {
