--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ a.list-header:hover, a.list-header:focus{
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #fff;    
-    background: #4d5ae5;
+    background-color: #4d5ae5;
     gap: 10px;
     padding: 16px 32px;
     border-radius: 4px;
@@ -180,7 +180,7 @@ a.list-header:hover, a.list-header:focus{
 }
 
 .button:focus, .button:hover{
-        background: #404bbf;
+        background-color: #404bbf;
         
 }
 /* ВТОРАЯ СЕКИЯ */
@@ -425,7 +425,7 @@ li.portfolio-item{
     width: 360px;
     height: 300px;
     background-color: #4D5AE5;
-    color: #ffffff;
+    color: #f4f4fd;
     display: flex;
     align-items: start;
     justify-content: center;
@@ -603,7 +603,7 @@ footer .contacts-info-link:focus {
 }
 .container-footer{
     display: flex;
-    align-items: baseline;
+    
 }
 .container-footer-logo{
     margin-right: 120px;
@@ -622,7 +622,7 @@ footer .contacts-info-link:focus {
      height: 24px;
 }
 .footer-title-social{
-    margin-bottom: 16px;
+    margin: 0 0 16px 0;
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
